feat: 取引詳細・レビュー・販売履歴を整備